docs: update translate

--- a/apps/www/content/docs/about.mdx
+++ b/apps/www/content/docs/about.mdx
@@ -1,20 +1,20 @@
 ---
-title: About
-description: Powered by amazing open source projects.
+title: 关于
+description: 由惊人的开源项目驱动。
 ---
 
-## About
+## 关于
 
-[ui.shadcn.com](https://ui.shadcn.com) is a project by [shadcn](https://shadcn.com).
+[ui.shadcn.com](https://ui.shadcn.com) 是 [shadcn](https://shadcn.com) 的一个项目。
 
-## Credits
+## 贡献
 
-- [Radix UI](https://radix-ui.com) - For the primitives.
-- [Vercel](https://vercel.com) - Where I host all my projects.
-- [Shu Ding](https://shud.in) - The typography style is adapted from his work on Nextra.
-- [Cal](https://cal.com) - Where I copied the styles for the first component: the `Button`.
-- [cmdk](https://cmdk.paco.me) - For the `<Command />` component.
+- [Radix UI](https://radix-ui.com) - 用于基础组件。
+- [Vercel](https://vercel.com) - 我所有项目的托管平台。
+- [Shu Ding](https://shud.in) - 字体风格借鉴于他在 Nextra 上的作品。
+- [Cal](https://cal.com) - 我借鉴第一个组件“按钮”的样式。
+- [cmdk](https://cmdk.paco.me) - 用于 `<Command />` 组件。
 
-## License
+## 许可证
 
 MIT © [shadcn](https://shadcn.com)
