--- a/apps/www/content/docs/components/avatar.mdx
+++ b/apps/www/content/docs/components/avatar.mdx
@@ -1,6 +1,6 @@
 ---
-title: Avatar
-description: An image element with a fallback for representing the user.
+title: 头像
+description: 一种图像元素，用于表示用户，并具有后备图像。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/avatar
@@ -8,18 +8,18 @@ links:
 ---
 
 <ComponentPreview
-  name="avatar-demo"
-  title="Avatar"
-  description="An avatar with a fallback."
+  name="头像演示"
+  title="头像"
+  description="带有后备图像的头像."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -33,17 +33,17 @@ npx shadcn@latest add avatar
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖:</Step>
 
 ```bash
 npm install @radix-ui/react-avatar
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="avatar" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -51,7 +51,7 @@ npm install @radix-ui/react-avatar
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { Avatar, AvatarFallback, AvatarImage } from "@/components/ui/avatar"
