--- a/apps/www/content/docs/components/breadcrumb.mdx
+++ b/apps/www/content/docs/components/breadcrumb.mdx
@@ -1,22 +1,22 @@
 ---
-title: Breadcrumb
-description: Displays the path to the current resource using a hierarchy of links.
+title: 面包屑导航
+description: 使用链接层次结构显示当前资源的路径。
 component: true
 ---
 
 <ComponentPreview
   name="breadcrumb-demo"
   className="[&_.preview]:p-2"
-  description="A breadcrumb with a collapsible dropdown."
+  description="带有可折叠下拉菜单的面包屑导航。"
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -30,11 +30,11 @@ npx shadcn@latest add breadcrumb
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="breadcrumb" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -42,7 +42,7 @@ npx shadcn@latest add breadcrumb
 
 </CodeTabs>
 
-## Usage
+## 使用
 
 ```tsx
 import {
@@ -59,29 +59,29 @@ import {
 <Breadcrumb>
   <BreadcrumbList>
     <BreadcrumbItem>
-      <BreadcrumbLink href="/">Home</BreadcrumbLink>
+      <BreadcrumbLink href="/">首页</BreadcrumbLink>
     </BreadcrumbItem>
     <BreadcrumbSeparator />
     <BreadcrumbItem>
-      <BreadcrumbLink href="/components">Components</BreadcrumbLink>
+      <BreadcrumbLink href="/components">组件</BreadcrumbLink>
     </BreadcrumbItem>
     <BreadcrumbSeparator />
     <BreadcrumbItem>
-      <BreadcrumbPage>Breadcrumb</BreadcrumbPage>
+      <BreadcrumbPage>面包屑导航</BreadcrumbPage>
     </BreadcrumbItem>
   </BreadcrumbList>
 </Breadcrumb>
 ```
 
-## Examples
+## 示例
 
-### Custom separator
+### 自定义分隔符
 
-Use a custom component as `children` for `<BreadcrumbSeparator />` to create a custom separator.
+使用自定义组件作为 `<BreadcrumbSeparator />` 的 `children` 来创建自定义分隔符。
 
 <ComponentPreview
   name="breadcrumb-separator"
-  description="A breadcrumb with a custom separator"
+  description="带有自定义分隔符的面包屑导航"
 />
 
 ```tsx showLineNumbers {1,10-12}
@@ -92,13 +92,13 @@ import { Slash } from "lucide-react"
 <Breadcrumb>
   <BreadcrumbList>
     <BreadcrumbItem>
-      <BreadcrumbLink href="/">Home</BreadcrumbLink>
+      <BreadcrumbLink href="/">首页</BreadcrumbLink>
     </BreadcrumbItem>
     <BreadcrumbSeparator>
       <Slash />
     </BreadcrumbSeparator>
     <BreadcrumbItem>
-      <BreadcrumbLink href="/components">Components</BreadcrumbLink>
+      <BreadcrumbLink href="/components">组件</BreadcrumbLink>
     </BreadcrumbItem>
   </BreadcrumbList>
 </Breadcrumb>
@@ -106,14 +106,14 @@ import { Slash } from "lucide-react"
 
 ---
 
-### Dropdown
+### 下拉菜单
 
-You can compose `<BreadcrumbItem />` with a `<DropdownMenu />` to create a dropdown in the breadcrumb.
+您可以将 `<BreadcrumbItem />` 与 `<DropdownMenu />` 组合在一起，以在面包屑中创建一个下拉菜单。
 
 <ComponentPreview
   name="breadcrumb-dropdown"
   className="[&_.preview]:p-2"
-  description="A breadcrumb with a dropdown."
+  description="带有下拉菜单的面包屑导航."
 />
 
 ```tsx showLineNumbers {1-6,11-21}
@@ -129,12 +129,12 @@ import {
 <BreadcrumbItem>
   <DropdownMenu>
     <DropdownMenuTrigger className="flex items-center gap-1">
-      Components
+      组件
       <ChevronDownIcon />
     </DropdownMenuTrigger>
     <DropdownMenuContent align="start">
-      <DropdownMenuItem>Documentation</DropdownMenuItem>
-      <DropdownMenuItem>Themes</DropdownMenuItem>
+      <DropdownMenuItem>文档</DropdownMenuItem>
+      <DropdownMenuItem>主题</DropdownMenuItem>
       <DropdownMenuItem>GitHub</DropdownMenuItem>
     </DropdownMenuContent>
   </DropdownMenu>
@@ -143,14 +143,14 @@ import {
 
 ---
 
-### Collapsed
+### 折叠状态
 
-We provide a `<BreadcrumbEllipsis />` component to show a collapsed state when the breadcrumb is too long.
+我们提供了一个 `<BreadcrumbEllipsis />` 组件，用于在面包屑过长时显示折叠状态。
 
 <ComponentPreview
   name="breadcrumb-ellipsis"
   className="[&_.preview]:p-2"
-  description="A breadcrumb showing a collapsed state."
+  description="显示折叠状态的面包屑导航."
 />
 
 ```tsx showLineNumbers {1,9}
@@ -171,13 +171,13 @@ import { BreadcrumbEllipsis } from "@/components/ui/breadcrumb"
 
 ---
 
-### Link component
+### 链接组件
 
-To use a custom link component from your routing library, you can use the `asChild` prop on `<BreadcrumbLink />`.
+要使用来自路由库的自定义链接组件，您可以在 `<BreadcrumbLink />` 上使用 `asChild` 属性。
 
 <ComponentPreview
   name="breadcrumb-link"
-  description="A breadcrumb with a custom Link component"
+  description="带有自定义链接组件的面包屑导航"
 />
 
 ```tsx showLineNumbers {1,8-10}
@@ -189,7 +189,7 @@ import { Link } from "next/link"
   <BreadcrumbList>
     <BreadcrumbItem>
       <BreadcrumbLink asChild>
-        <Link href="/">Home</Link>
+        <Link href="/">首页</Link>
       </BreadcrumbLink>
     </BreadcrumbItem>
     {/* ... */}
@@ -199,14 +199,14 @@ import { Link } from "next/link"
 
 ---
 
-### Responsive
+### 响应式
 
-Here's an example of a responsive breadcrumb that composes `<BreadcrumbItem />` with `<BreadcrumbEllipsis />`, `<DropdownMenu />`, and `<Drawer />`.
+这是一个响应式面包屑导航示例，它将 `<BreadcrumbItem />` 与 `<BreadcrumbEllipsis />`，`<DropdownMenu />` 和 `<Drawer />` 组合在一起。
 
-It displays a dropdown on desktop and a drawer on mobile.
+它在桌面上显示下拉菜单，在移动设备上显示抽屉。
 
 <ComponentPreview
   name="breadcrumb-responsive"
   className="[&_.preview]:p-2"
-  description="A responsive breadcrumb. It displays a dropdown on desktop and a drawer on mobile."
+  description="一个响应式面包屑导航。在桌面上显示下拉菜单，在移动设备上显示抽屉."
 />
