--- a/apps/www/content/docs/components/input-otp.mdx
+++ b/apps/www/content/docs/components/input-otp.mdx
@@ -1,38 +1,38 @@
 ---
-title: Input OTP
-description: Accessible one-time password component with copy paste functionality.
+title: 输入一次性密码（OTP）
+description: 可访问的一次性密码组件，具有复制粘贴功能。
 component: true
 links:
   doc: https://input-otp.rodz.dev
 ---
 
-<ComponentPreview name="input-otp-demo" description="An 6 digits input OTP." />
+<ComponentPreview name="input-otp-demo" description="一个6位数字输入的一次性密码（OTP）。" />
 
-## About
+## 关于
 
-Input OTP is built on top of [input-otp](https://github.com/guilhermerodz/input-otp) by [@guilherme_rodz](https://twitter.com/guilherme_rodz).
+输入一次性密码（OTP）是基于 [input-otp](https://github.com/guilhermerodz/input-otp) 构建的，由 [@guilherme_rodz](https://twitter.com/guilherme_rodz) 提供支持。
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
 <Steps>
 
-<Step>Run the following command:</Step>
+<Step>运行以下命令：</Step>
 
 ```bash
 npx shadcn@latest add input-otp
 ```
 
-<Step>Update `tailwind.config.js`</Step>
+<Step>更新 `tailwind.config.js`</Step>
 
-Add the following animations to your `tailwind.config.js` file:
+将以下动画添加到你的 `tailwind.config.js` 文件中：
 
 ```js showLineNumbers title="tailwind.config.js" {6-9,12}
 /** @type {import('tailwindcss').Config} */
@@ -61,21 +61,21 @@ module.exports = {
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install input-otp
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="input-otp" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配你的项目设置。</Step>
 
-<Step>Update `tailwind.config.js`</Step>
+<Step>更新 `tailwind.config.js`</Step>
 
-Add the following animations to your `tailwind.config.js` file:
+将以下动画添加到你的 `tailwind.config.js` 文件中：
 
 ```js showLineNumbers title="tailwind.config.js" {6-9,12}
 /** @type {import('tailwindcss').Config} */
@@ -102,7 +102,7 @@ module.exports = {
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -129,15 +129,15 @@ import {
 </InputOTP>
 ```
 
-## Examples
+## 示例
 
-### Pattern
+### 模式
 
-Use the `pattern` prop to define a custom pattern for the OTP input.
+使用 `pattern` 属性定义一次性密码输入的自定义模式。
 
 <ComponentPreview
   name="input-otp-pattern"
-  description="An input OTP with alphanumeric pattern."
+  description="带有字母数字模式的一次性密码输入。"
 />
 
 ```tsx showLineNumbers {1,7}
@@ -156,13 +156,13 @@ import { REGEXP_ONLY_DIGITS_AND_CHARS } from "input-otp"
 </InputOTP>
 ```
 
-### Separator
+### 分隔符
 
-You can use the `<InputOTPSeparator />` component to add a separator between the input groups.
+你可以使用 `<InputOTPSeparator />` 组件在输入组之间添加分隔符。
 
 <ComponentPreview
   name="input-otp-separator"
-  description="An input OTP with custom separator."
+  description="带有自定义分隔符的一次性密码输入。"
 />
 
 ```tsx showLineNumbers {4,15}
@@ -188,36 +188,35 @@ import {
 </InputOTP>
 ```
 
-### Controlled
+### 控制
 
-You can use the `value` and `onChange` props to control the input value.
+你可以使用 `value` 和 `onChange` 属性来控制输入值。
 
 <ComponentPreview name="input-otp-controlled" />
 
-### Form
+### 表单
 
 <ComponentPreview name="input-otp-form" />
 
-## Changelog
+## 更新日志
 
-### 2024-03-19 Composition
+### 2024-03-19 组合
 
-We've made some updates and replaced the render props pattern with composition. Here's how to update your code if you prefer the composition pattern.
+我们进行了一些更新，并用组合模式替换了渲染属性模式。如果你更喜欢组合模式，以下是更新你代码的方法。
 
 <Callout className="mt-6">
-  **Note:** You are not required to update your code if you are using the
-  `render` prop. It is still supported.
+  **注意：**如果你使用的是 `render` 属性，则不需要更新你的代码。该属性仍然受到支持。
 </Callout>
 
 <Steps>
 
-<Step>Update to the latest version of `input-otp`.</Step>
+<Step>更新到最新版本的 `input-otp`。</Step>
 
 ```bash
 npm install input-otp@latest
 ```
 
-<Step>Update `input-otp.tsx`</Step>
+<Step>更新 `input-otp.tsx`</Step>
 
 ```diff showLineNumbers title="input-otp.tsx" {2,8-11}
 - import { OTPInput, SlotProps } from "input-otp"
@@ -233,7 +232,7 @@ npm install input-otp@latest
 +   const { char, hasFakeCaret, isActive } = inputOTPContext.slots[index]
 ```
 
-<Step>Then replace the `render` prop in your code.</Step>
+<Step>然后在你的代码中替换 `render` 属性。</Step>
 
 ```diff showLineNumbers {2-12}
 <InputOTP maxLength={6}>
@@ -253,9 +252,9 @@ npm install input-otp@latest
 
 </Steps>
 
-### 2024-03-19 Disabled
+### 2024-03-19 禁用
 
-To add a disabled state to the input, update `<InputOTP />` as follows:
+要为输入添加禁用状态，请按如下方式更新 `<InputOTP />`：
 
 ```tsx showLineNumbers title="input-otp.tsx" {4,7-11}
 const InputOTP = React.forwardRef<
