--- a/apps/www/content/docs/components/input.mdx
+++ b/apps/www/content/docs/components/input.mdx
@@ -1,22 +1,22 @@
 ---
-title: Input
-description: Displays a form input field or a component that looks like an input field.
+title: 输入
+description: 显示一个表单输入字段或一个看起来像输入字段的组件。
 component: true
 ---
 
 <ComponentPreview
   name="input-demo"
   className="[&_input]:max-w-xs"
-  description="A form input component."
+  description="一个表单输入组件."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -30,11 +30,11 @@ npx shadcn@latest add input
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="input" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -42,7 +42,7 @@ npx shadcn@latest add input
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { Input } from "@/components/ui/input"
@@ -52,48 +52,48 @@ import { Input } from "@/components/ui/input"
 <Input />
 ```
 
-## Examples
+## 示例
 
-### Default
+### 默认
 
 <ComponentPreview
   name="input-demo"
   className="[&_input]:max-w-xs"
-  description="A form input component."
+  description="一个表单输入组件."
 />
 
-### File
+### 文件
 
 <ComponentPreview
   name="input-file"
   className="[&_input]:max-w-xs"
-  description="A file input component."
+  description="一个文件输入组件."
 />
 
-### Disabled
+### 禁用
 
 <ComponentPreview
   name="input-disabled"
   className="[&_input]:max-w-xs"
-  description="A disabled input component."
+  description="一个禁用的输入组件."
 />
 
-### With Label
+### 带标签
 
 <ComponentPreview
   name="input-with-label"
   className="[&_input]:max-w-xs"
-  description="An input component with a label."
+  description="一个带标签的输入组件."
 />
 
-### With Button
+### 带按钮
 
 <ComponentPreview
   name="input-with-button"
   className="[&_input]:max-w-xs"
-  description="An input component with a button."
+  description="一个带按钮的输入组件."
 />
 
-### Form
+### 表单
 
 <ComponentPreview name="input-form" />
