--- a/apps/www/content/docs/components/label.mdx
+++ b/apps/www/content/docs/components/label.mdx
@@ -1,21 +1,21 @@
 ---
-title: Label
-description: Renders an accessible label associated with controls.
+title: 标签
+description: 渲染与控件关联的可访问标签。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/label
   api: https://www.radix-ui.com/docs/primitives/components/label#api-reference
 ---
 
-<ComponentPreview name="label-demo" description="A label" />
+<ComponentPreview name="label-demo" description="一个标签" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -29,17 +29,17 @@ npx shadcn@latest add label
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-label
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="label" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -47,12 +47,12 @@ npm install @radix-ui/react-label
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { Label } from "@/components/ui/label"
 ```
 
 ```tsx
-<Label htmlFor="email">Your email address</Label>
+<Label htmlFor="email">您的电子邮件地址</Label>
 ```
