--- a/apps/www/content/docs/components/progress.mdx
+++ b/apps/www/content/docs/components/progress.mdx
@@ -1,6 +1,6 @@
 ---
-title: Progress
-description: Displays an indicator showing the completion progress of a task, typically displayed as a progress bar.
+title: 进度
+description: 显示一个指示器，显示任务的完成进度，通常以进度条的形式展示。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/progress
@@ -9,16 +9,16 @@ links:
 
 <ComponentPreview
   name="progress-demo"
-  description="A progress bar component."
+  description="一个进度条组件."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -32,17 +32,17 @@ npx shadcn@latest add progress
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-progress
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="progress" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -50,7 +50,7 @@ npm install @radix-ui/react-progress
 
 </CodeTabs>
 
-## Usage
+## 使用
 
 ```tsx
 import { Progress } from "@/components/ui/progress"
