--- a/apps/www/content/docs/components/separator.mdx
+++ b/apps/www/content/docs/components/separator.mdx
@@ -1,21 +1,21 @@
 ---
-title: Separator
-description: Visually or semantically separates content.
+title: 分隔符
+description: 在视觉或语义上分隔内容。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/separator
   api: https://www.radix-ui.com/docs/primitives/components/separator#api-reference
 ---
 
-<ComponentPreview name="separator-demo" description="A separator component." />
+<ComponentPreview name="separator-demo" description="一个分隔符组件。" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -28,17 +28,17 @@ npx shadcn@latest add separator
 <TabsContent value="manual">
 
 <Steps>
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-separator
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="separator" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -46,7 +46,7 @@ npm install @radix-ui/react-separator
 
 </CodeTabs>
 
-## Usage
+## 使用方法
 
 ```tsx
 import { Separator } from "@/components/ui/separator"
