--- a/apps/www/content/docs/components/skeleton.mdx
+++ b/apps/www/content/docs/components/skeleton.mdx
@@ -1,18 +1,18 @@
 ---
-title: Skeleton
-description: Use to show a placeholder while content is loading.
+title: 骨架
+description: 在内容加载时显示占位符。
 component: true
 ---
 
-<ComponentPreview name="skeleton-demo" description="A skeleton component." />
+<ComponentPreview name="skeleton-demo" description="一个骨架组件。" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -26,11 +26,11 @@ npx shadcn@latest add skeleton
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="skeleton" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目配置。</Step>
 
 </Steps>
 
@@ -38,7 +38,7 @@ npx shadcn@latest add skeleton
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { Skeleton } from "@/components/ui/skeleton"
@@ -48,11 +48,11 @@ import { Skeleton } from "@/components/ui/skeleton"
 <Skeleton className="w-[100px] h-[20px] rounded-full" />
 ```
 
-## Examples
+## 示例
 
-### Card
+### 卡片
 
 <ComponentPreview
   name="skeleton-card"
-  description="A card with skeleton showing a loading state."
+  description="一个带有骨架的卡片，显示加载状态。"
 />
