--- a/apps/www/content/docs/components/typography.mdx
+++ b/apps/www/content/docs/components/typography.mdx
@@ -1,13 +1,13 @@
 ---
-title: Typography
-description: Styles for headings, paragraphs, lists...etc
+title: 排版
+description: 标题、段落、列表等的样式
 component: true
 ---
 
 <ComponentPreview
   name="typography-demo"
   className="[&>div.min-h-[350px]]:p-6"
-  description="A collection of typographic elements."
+  description="一组排版元素。"
 />
 
 ## h1
@@ -42,22 +42,22 @@ component: true
 
 <ComponentPreview name="typography-list" />
 
-## Inline code
+## 行内代码
 
 <ComponentPreview name="typography-inline-code" />
 
-## Lead
+## 引导
 
 <ComponentPreview name="typography-lead" />
 
-## Large
+## 大号
 
 <ComponentPreview name="typography-large" />
 
-## Small
+## 小号
 
 <ComponentPreview name="typography-small" />
 
-## Muted
+## 静音
 
 <ComponentPreview name="typography-muted" />
