--- a/apps/www/content/docs/dark-mode/index.mdx
+++ b/apps/www/content/docs/dark-mode/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Dark Mode
-description: Adding dark mode to your site.
+title: 深色模式
+description: 为您的网站添加深色模式。
 ---
 
 <div className="grid sm:grid-cols-2 gap-4 sm:gap-6">
