--- a/apps/www/content/docs/figma.mdx
+++ b/apps/www/content/docs/figma.mdx
@@ -1,12 +1,12 @@
 ---
 title: Figma
-description: Every component recreated in Figma. With customizable props, typography and icons.
+description: 在 Figma 中重新创建的每个组件。带有可自定义的属性、排版和图标。
 ---
 
-## Paid
+## 付费
 
-- [shadcn/ui kit](https://shadcndesign.com) by [ Matt Wierzbicki](https://x.com/matsugfx) - A premium, always up-to-date UI kit for Figma - shadcn/ui compatible and optimized for smooth design-to-dev handoff.
+- [shadcn/ui kit](https://shadcndesign.com) 由 [Matt Wierzbicki](https://x.com/matsugfx) 提供 - 一款高级、始终保持最新的 Figma UI 套件，兼容 shadcn/ui，并优化了设计到开发的顺利交接。
 
-## Free
+## 免费
 
-- [shadcn/ui design system](https://www.figma.com/community/file/1203061493325953101) by [Pietro Schirano](https://twitter.com/skirano) - A design companion for shadcn/ui. Each component was painstakingly crafted to perfectly match the code implementation.
+- [shadcn/ui 设计系统](https://www.figma.com/community/file/1203061493325953101) 由 [Pietro Schirano](https://twitter.com/skirano) 提供 - shadcn/ui 的设计助手。每个组件都经过精心打磨，以完美匹配代码实现。
