--- a/apps/www/content/docs/blocks.mdx
+++ b/apps/www/content/docs/blocks.mdx
@@ -1,35 +1,35 @@
 ---
-title: Add a block
-description: Contribute components to the blocks library.
+title: 添加一个区块
+description: 为区块库贡献组件。
 ---
 
-We are inviting the community to contribute to the [blocks library](/blocks). Share your components and blocks with other developers and help build a library of high-quality, reusable components.
+我们邀请社区为 [区块库](/blocks) 贡献您的组件和区块，与其他开发者分享，帮助构建一个高质量、可重用组件的库。
 
-We'd love to see all types of blocks: applications, marketing, products, and more.
+我们希望看到各种类型的区块：应用、营销、产品等等。
 
-## Setup your workspace
+## 设置您的工作空间
 
 <Steps>
 
-### Fork the repository
+### 派生仓库
 
 ```bash
 git clone https://github.com/shadcn-ui/ui.git
 ```
 
-### Create a new branch
+### 创建新分支
 
 ```bash
 git checkout -b username/my-new-block
 ```
 
-### Install dependencies
+### 安装依赖
 
 ```bash
 pnpm install
 ```
 
-### Start the dev server
+### 启动开发服务器
 
 ```bash
 pnpm www:dev
@@ -37,15 +37,15 @@ pnpm www:dev
 
 </Steps>
 
-## Add a block
+## 添加一个区块
 
-A block can be a single component (eg. a variation of a ui component) or a complex component (eg. a dashboard) with multiple components, hooks, and utils.
+一个区块可以是一个单一组件（如一个 UI 组件的变体）或一个复杂组件（如一个仪表盘），包含多个组件、钩子和工具。
 
 <Steps>
 
-### Create a new block
+### 创建新的区块
 
-Create a new folder in the `apps/www/registry/new-york/blocks` directory. Make sure the folder is named in kebab-case and under `new-york`.
+在 `apps/www/registry/new-york/blocks` 目录下创建一个新文件夹。确保文件夹使用 kebab-case 命名，并位于 `new-york` 下。
 
 ```txt
 apps
@@ -58,13 +58,13 @@ apps
 
 <Callout className="mt-6">
 
-**Note:** The build script will take care of building the block for the `default` style.
+**注意：** 构建脚本会处理 `default` 样式的区块构建。
 
 </Callout>
 
-### Add your block files
+### 添加您的区块文件
 
-Add your files to the block folder. Here is an example of a block with a page, components, hooks, and utils.
+将您的文件添加到区块文件夹。以下是一个包含页面、组件、钩子和工具的区块示例。
 
 ```txt
 dashboard-01
@@ -80,21 +80,21 @@ dashboard-01
 
 <Callout className="mt-6">
 
-**Note:** You can start with one file and add more files later.
+**注意：** 您可以从一个文件开始，稍后添加更多文件。
 
 </Callout>
 
 </Steps>
 
-## Add your block to the registry
+## 将您的区块添加到注册表
 
 <Steps>
 
-### Add your block definition to `registry-blocks.tsx`
+### 将您的区块定义添加到 `registry-blocks.tsx`
 
-To add your block to the registry, you need to add your block definition to `registry-blocks.ts`.
+要将您的区块添加到注册表，您需要将区块定义添加到 `registry-blocks.ts`。
 
-This follows the registry schema at [https://ui.shadcn.com/schema/registry-item.json](https://ui.shadcn.com/schema/registry-item.json).
+这遵循注册表模式 [https://ui.shadcn.com/schema/registry-item.json](https://ui.shadcn.com/schema/registry-item.json)。
 
 ```tsx title="apps/www/registry/registry-blocks.tsx"
 export const blocks = [
@@ -102,8 +102,8 @@ export const blocks = [
   {
     name: "dashboard-01",
     author: "shadcn (https://ui.shadcn.com)",
-    title: "Dashboard",
-    description: "A simple dashboard with a hello world component.",
+    title: "仪表盘",
+    description: "一个简单的仪表盘，包含一个 hello world 组件。",
     type: "registry:block",
     registryDependencies: ["input", "button", "card"],
     dependencies: ["zod"],
@@ -130,14 +130,14 @@ export const blocks = [
         type: "registry:lib",
       },
     ],
-    categories: ["dashboard"],
+    categories: ["仪表盘"],
   },
 ]
 ```
 
-Make sure you add a name, description, type, registryDependencies, dependencies, files, and categories. We'll go over each of these in more detail in the schema docs (coming soon).
+确保您添加名称、描述、类型、registryDependencies、dependencies、files 和 categories。我们将在即将发布的模式文档中详细介绍每个项。
 
-### Run the build script
+### 运行构建脚本
 
 ```bash
 pnpm registry:build
@@ -145,50 +145,50 @@ pnpm registry:build
 
 <Callout className="mt-6">
 
-**Note:** you do not need to run this script for every change. You only need to run it when you update the block definition.
+**注意：** 您不需要为每个更改运行此脚本。仅在您更新区块定义时运行它。
 
 </Callout>
 
-### View your block
+### 查看您的区块
 
-Once the build script is finished, you can view your block at `http://localhost:3333/blocks/[CATEGORY]` or a full screen preview at `http://localhost:3333/view/styles/new-york/dashboard-01`.
+一旦构建脚本完成，您可以在 `http://localhost:3333/blocks/[CATEGORY]` 查看您的区块，或者在 `http://localhost:3333/view/styles/new-york/dashboard-01` 查看全屏预览。
 
 <Image
   src="/images/block-preview-light.png"
   width="1432"
   height="960"
-  alt="Block preview"
+  alt="区块预览"
   className="border dark:hidden shadow-sm rounded-lg overflow-hidden mt-6 w-full"
 />
 <Image
   src="/images/block-preview-dark.png"
   width="1432"
   height="960"
-  alt="Block preview"
+  alt="区块预览"
   className="border hidden dark:block shadow-sm rounded-lg overflow-hidden mt-6 w-full"
 />
 
-### Build your block
+### 构建您的区块
 
-You can now build your block by editing the files in the block folder and viewing the changes in the browser.
+您现在可以通过编辑区块文件夹中的文件来构建您的区块，并在浏览器中查看更改。
 
-If you add more files, make sure to add them to the `files` array in the block definition.
+如果您添加了更多文件，请确保将它们添加到区块定义中的 `files` 数组中。
 
 </Steps>
 
-## Publish your block
+## 发布您的区块
 
-Once you're ready to publish your block, you can submit a pull request to the main repository.
+一旦您准备好发布您的区块，可以向主仓库提交拉取请求。
 
 <Steps>
 
-### Run the build script
+### 运行构建脚本
 
 ```bash
 pnpm registry:build
 ```
 
-### Capture a screenshot
+### 捕获截图
 
 ```bash
 pnpm registry:capture
@@ -196,43 +196,43 @@ pnpm registry:capture
 
 <Callout className="mt-6">
 
-**Note:** If you've run the capture script before, you might need to delete the existing screenshots (both light and dark) at `apps/www/public/r/styles/new-york` and run the script again.
+**注意：** 如果您之前运行过捕获脚本，可能需要删除 `apps/www/public/r/styles/new-york` 中现有的截图（光明和黑暗模式），然后再次运行脚本。
 
 </Callout>
 
-### Submit a pull request
+### 提交拉取请求
 
-Commit your changes and submit a pull request to the main repository.
+提交您的更改，并向主仓库提交拉取请求。
 
-Your block will be reviewed and merged. Once merged it will be published to the website and available to be installed via the CLI.
+您的区块将被审核并合并。一旦合并，它将被发布到网站，并可以通过 CLI 安装。
 
 </Steps>
 
-## Categories
+## 类别
 
-The `categories` property is used to organize your block in the registry.
+`categories` 属性用于在注册表中组织您的区块。
 
-### Add a category
+### 添加类别
 
-If you need to add a new category, you can do so by adding it to the `registryCategories` array in `apps/www/registry/registry-categories.ts`.
+如果您需要添加一个新类别，可以通过将其添加到 `apps/www/registry/registry-categories.ts` 中的 `registryCategories` 数组来实现。
 
 ```tsx title="apps/www/registry/registry-categories.ts"
 export const registryCategories = [
   // ...
   {
-    name: "Input",
+    name: "输入",
     slug: "input",
     hidden: false,
   },
 ]
 ```
 
-## Guidelines
+## 指导原则
 
-Here are some guidelines to follow when contributing to the blocks library.
+以下是贡献于区块库时应遵循的一些指导原则。
 
-- The following properties are required for the block definition: `name`, `description`, `type`, `files`, and `categories`.
-- Make sure to list all registry dependencies in `registryDependencies`. A registry dependency is the name of the component in the registry eg. `input`, `button`, `card`, etc.
-- Make sure to list all dependencies in `dependencies`. A dependency is the name of the package in the registry eg. `zod`, `sonner`, etc.
-- If your block has a page (optional), it should be the first entry in the `files` array and it should have a `target` property. This helps the CLI place the page in the correct location for file-based routing.
-- **Imports should always use the `@/registry` path.** eg. `import { Input } from "@/registry/new-york/input"`
+- 区块定义所需的属性：`name`、`description`、`type`、`files` 和 `categories`。
+- 确保在 `registryDependencies` 中列出所有注册依赖项。注册依赖项是注册表中组件的名称，如 `input`、`button`、`card` 等。
+- 确保在 `dependencies` 中列出所有依赖项。依赖项是注册表中包的名称，如 `zod`、`sonner` 等。
+- 如果您的区块有页面（可选），则应是 `files` 数组中的第一个条目，并且应该有 `target` 属性。这有助于 CLI 将页面放置在文件路由的正确位置。
+- **导入应该始终使用 `@/registry` 路径。** 例如 `import { Input } from "@/registry/new-york/input"`
