--- a/apps/www/content/docs/components-json.mdx
+++ b/apps/www/content/docs/components-json.mdx
@@ -1,29 +1,28 @@
 ---
 title: components.json
-description: Configuration for your project.
+description: 项目的配置文件。
 ---
 
-The `components.json` file holds configuration for your project.
+`components.json` 文件包含了你项目的配置。
 
-We use it to understand how your project is set up and how to generate components customized for your project.
+我们使用它来了解你的项目是如何设置的，以及如何生成符合你项目要求的组件。
 
 <Callout className="mt-6">
-  Note: The `components.json` file is optional and **only required if you're
-  using the CLI** to add components to your project. If you're using the copy
-  and paste method, you don't need this file.
+  注意：`components.json` 文件是可选的，**仅在你使用 CLI**
+  将组件添加到项目时才需要。如果你使用复制粘贴的方法，则不需要这个文件。
 </Callout>
 
-You can create a `components.json` file in your project by running the following command:
+你可以通过运行以下命令在项目中创建一个 `components.json` 文件：
 
 ```bash
 npx shadcn@latest init
 ```
 
-See the <Link href="/docs/cli">CLI section</Link> for more information.
+详细信息请参见 <Link href="/docs/cli">CLI 部分</Link>。
 
 ## $schema
 
-You can see the JSON Schema for `components.json` [here](https://ui.shadcn.com/schema.json).
+你可以在 [这里](https://ui.shadcn.com/schema.json) 查看 `components.json` 的 JSON Schema。
 
 ```json title="components.json"
 {
@@ -33,7 +32,7 @@ You can see the JSON Schema for `components.json` [here](https://ui.shadcn.com/s
 
 ## style
 
-The style for your components. **This cannot be changed after initialization.**
+你的组件的样式。**初始化后无法更改。**
 
 ```json title="components.json"
 {
@@ -41,17 +40,17 @@ The style for your components. **This cannot be changed after initialization.**
 }
 ```
 
-The `default` style has been deprecated. Use the `new-york` style instead.
+`default` 样式已被弃用，请使用 `new-york` 样式。
 
 ## tailwind
 
-Configuration to help the CLI understand how Tailwind CSS is set up in your project.
+帮助 CLI 理解 Tailwind CSS 在你项目中的配置。
 
-See the <Link href="/docs/installation">installation section</Link> for how to set up Tailwind CSS.
+有关如何设置 Tailwind CSS 的详细信息，请参见 <Link href="/docs/installation">安装部分</Link>。
 
 ### tailwind.config
 
-Path to where your `tailwind.config.js` file is located. **For Tailwind CSS v4, leave this blank.**
+`tailwind.config.js` 文件的位置路径。**对于 Tailwind CSS v4，请保持为空。**
 
 ```json title="components.json"
 {
@@ -63,7 +62,7 @@ Path to where your `tailwind.config.js` file is located. **For Tailwind CSS v4, 
 
 ### tailwind.css
 
-Path to the CSS file that imports Tailwind CSS into your project.
+导入 Tailwind CSS 到你项目中的 CSS 文件路径。
 
 ```json title="components.json"
 {
@@ -75,7 +74,7 @@ Path to the CSS file that imports Tailwind CSS into your project.
 
 ### tailwind.baseColor
 
-This is used to generate the default color palette for your components. **This cannot be changed after initialization.**
+用于生成组件的默认颜色调色板。**初始化后无法更改。**
 
 ```json title="components.json"
 {
@@ -87,9 +86,9 @@ This is used to generate the default color palette for your components. **This c
 
 ### tailwind.cssVariables
 
-You can choose between using CSS variables or Tailwind CSS utility classes for theming.
+你可以选择使用 CSS 变量或 Tailwind CSS 工具类进行主题设置。
 
-To use utility classes for theming set `tailwind.cssVariables` to `false`. For CSS variables, set `tailwind.cssVariables` to `true`.
+要使用工具类进行主题设置，请将 `tailwind.cssVariables` 设置为 `false`。若使用 CSS 变量，请将 `tailwind.cssVariables` 设置为 `true`。
 
 ```json title="components.json"
 {
@@ -99,13 +98,13 @@ To use utility classes for theming set `tailwind.cssVariables` to `false`. For C
 }
 ```
 
-For more information, see the <Link href="/docs/theming">theming docs</Link>.
+有关更多信息，请参见 <Link href="/docs/theming">主题文档</Link>。
 
-**This cannot be changed after initialization.** To switch between CSS variables and utility classes, you'll have to delete and re-install your components.
+**初始化后无法更改。** 若要在 CSS 变量和工具类之间切换，你需要删除并重新安装组件。
 
 ### tailwind.prefix
 
-The prefix to use for your Tailwind CSS utility classes. Components will be added with this prefix.
+Tailwind CSS 工具类使用的前缀。组件将使用该前缀添加。
 
 ```json title="components.json"
 {
@@ -117,9 +116,9 @@ The prefix to use for your Tailwind CSS utility classes. Components will be adde
 
 ## rsc
 
-Whether or not to enable support for React Server Components.
+是否启用对 React Server Components 的支持。
 
-The CLI automatically adds a `use client` directive to client components when set to `true`.
+当设置为 `true` 时，CLI 会自动在客户端组件中添加 `use client` 指令。
 
 ```json title="components.json"
 {
@@ -129,9 +128,9 @@ The CLI automatically adds a `use client` directive to client components when se
 
 ## tsx
 
-Choose between TypeScript or JavaScript components.
+在 TypeScript 或 JavaScript 组件之间进行选择。
 
-Setting this option to `false` allows components to be added as JavaScript with the `.jsx` file extension.
+将此选项设置为 `false` 允许以 JavaScript 的 `.jsx` 文件扩展名添加组件。
 
 ```json title="components.json"
 {
@@ -141,18 +140,17 @@ Setting this option to `false` allows components to be added as JavaScript with 
 
 ## aliases
 
-The CLI uses these values and the `paths` config from your `tsconfig.json` or `jsconfig.json` file to place generated components in the correct location.
+CLI 使用这些值和你的 `tsconfig.json` 或 `jsconfig.json` 文件中的 `paths` 配置来将生成的组件放置在正确位置。
 
-Path aliases have to be set up in your `tsconfig.json` or `jsconfig.json` file.
+路径别名必须在你的 `tsconfig.json` 或 `jsconfig.json` 文件中设置。
 
 <Callout className="mt-6">
-  **Important:** If you're using the `src` directory, make sure it is included
-  under `paths` in your `tsconfig.json` or `jsconfig.json` file.
+  **重要：** 如果你使用 `src` 目录，请确保它在你的 `tsconfig.json` 或 `jsconfig.json` 文件的 `paths` 中包含。
 </Callout>
 
 ### aliases.utils
 
-Import alias for your utility functions.
+你实用函数的导入别名。
 
 ```json title="components.json"
 {
@@ -164,7 +162,7 @@ Import alias for your utility functions.
 
 ### aliases.components
 
-Import alias for your components.
+你组件的导入别名。
 
 ```json title="components.json"
 {
@@ -176,9 +174,9 @@ Import alias for your components.
 
 ### aliases.ui
 
-Import alias for `ui` components.
+`ui` 组件的导入别名。
 
-The CLI will use the `aliases.ui` value to determine where to place your `ui` components. Use this config if you want to customize the installation directory for your `ui` components.
+CLI 将使用 `aliases.ui` 值来确定放置你的 `ui` 组件的地方。如果你想自定义 `ui` 组件的安装目录，请使用此配置。
 
 ```json title="components.json"
 {
@@ -190,7 +188,7 @@ The CLI will use the `aliases.ui` value to determine where to place your `ui` co
 
 ### aliases.lib
 
-Import alias for `lib` functions such as `format-date` or `generate-id`.
+`lib` 函数的导入别名，例如 `format-date` 或 `generate-id`。
 
 ```json title="components.json"
 {
@@ -202,7 +200,7 @@ Import alias for `lib` functions such as `format-date` or `generate-id`.
 
 ### aliases.hooks
 
-Import alias for `hooks` such as `use-media-query` or `use-toast`.
+`hooks` 的导入别名，例如 `use-media-query` 或 `use-toast`。
 
 ```json title="components.json"
 {
