--- a/apps/www/content/docs/components/accordion.mdx
+++ b/apps/www/content/docs/components/accordion.mdx
@@ -1,6 +1,6 @@
 ---
-title: Accordion
-description: A vertically stacked set of interactive headings that each reveal a section of content.
+title: 手风琴
+description: 一组垂直堆叠的互动标题，每个标题都能揭示一段内容。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/accordion
@@ -10,16 +10,16 @@ links:
 <ComponentPreview
   name="accordion-demo"
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
-  description="An accordion with three items"
+  description="一个包含三个项目的手风琴"
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 
 <TabsContent value="cli">
@@ -34,21 +34,21 @@ npx shadcn@latest add accordion
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-accordion
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="accordion" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配你的项目设置。</Step>
 
-<Step>Update `tailwind.config.js`</Step>
+<Step>更新 `tailwind.config.js`</Step>
 
-Add the following animations to your `tailwind.config.js` file:
+在你的 `tailwind.config.js` 文件中添加以下动画：
 
 ```js title="tailwind.config.js" {5-18}
 /** @type {import('tailwindcss').Config} */
@@ -80,7 +80,7 @@ module.exports = {
 
 </CodeTabs>
 
-## Usage
+## 使用方法
 
 ```tsx
 import {
@@ -94,9 +94,9 @@ import {
 ```tsx
 <Accordion type="single" collapsible>
   <AccordionItem value="item-1">
-    <AccordionTrigger>Is it accessible?</AccordionTrigger>
+    <AccordionTrigger>是否可以访问？</AccordionTrigger>
     <AccordionContent>
-      Yes. It adheres to the WAI-ARIA design pattern.
+      是的。它符合 WAI-ARIA 设计模式。
     </AccordionContent>
   </AccordionItem>
 </Accordion>
