--- a/apps/www/content/docs/components/checkbox.mdx
+++ b/apps/www/content/docs/components/checkbox.mdx
@@ -1,21 +1,21 @@
 ---
-title: Checkbox
-description: A control that allows the user to toggle between checked and not checked.
+title: 复选框
+description: 一种允许用户在选中和未选中之间切换的控件。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/checkbox
   api: https://www.radix-ui.com/docs/primitives/components/checkbox#api-reference
 ---
 
-<ComponentPreview name="checkbox-demo" description="A checkbox" />
+<ComponentPreview name="checkbox-demo" description="一个复选框" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -29,17 +29,17 @@ npx shadcn@latest add checkbox
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-checkbox
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="checkbox" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -47,7 +47,7 @@ npm install @radix-ui/react-checkbox
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { Checkbox } from "@/components/ui/checkbox"
@@ -57,20 +57,20 @@ import { Checkbox } from "@/components/ui/checkbox"
 <Checkbox />
 ```
 
-## Examples
+## 示例
 
-### With text
+### 带文本
 
 <ComponentPreview
   name="checkbox-with-text"
-  description="A checkbox with label and description."
+  description="带标签和描述的复选框."
 />
 
-### Disabled
+### 禁用
 
-<ComponentPreview name="checkbox-disabled" description="A disabled checkbox" />
+<ComponentPreview name="checkbox-disabled" description="一个禁用的复选框" />
 
-### Form
+### 表单
 
 <ComponentPreview name="checkbox-form-single" />
 
