--- a/apps/www/content/docs/components/collapsible.mdx
+++ b/apps/www/content/docs/components/collapsible.mdx
@@ -1,6 +1,6 @@
 ---
-title: Collapsible
-description: An interactive component which expands/collapses a panel.
+title: 可折叠组件
+description: 一个可以展开/折叠面板的交互组件。
 component: true
 featured: true
 links:
@@ -10,16 +10,16 @@ links:
 
 <ComponentPreview
   name="collapsible-demo"
-  description="A collapsible component."
+  description="一个可折叠组件."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行接口 (CLI)</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -33,17 +33,17 @@ npx shadcn@latest add collapsible
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-collapsible
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="collapsible" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配你的项目设置。</Step>
 
 </Steps>
 
@@ -51,7 +51,7 @@ npm install @radix-ui/react-collapsible
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -63,10 +63,9 @@ import {
 
 ```tsx
 <Collapsible>
-  <CollapsibleTrigger>Can I use this in my project?</CollapsibleTrigger>
+  <CollapsibleTrigger>我可以在我的项目中使用这个吗？</CollapsibleTrigger>
   <CollapsibleContent>
-    Yes. Free to use for personal and commercial projects. No attribution
-    required.
+    是的。可以自由用于个人和商业项目。不需要署名。
   </CollapsibleContent>
 </Collapsible>
 ```
