--- a/apps/www/content/docs/components/command.mdx
+++ b/apps/www/content/docs/components/command.mdx
@@ -1,6 +1,6 @@
 ---
-title: Command
-description: Fast, composable, unstyled command menu for React.
+title: 命令
+description: 快速、可组合、无样式的 React 命令菜单。
 component: true
 links:
   doc: https://cmdk.paco.me
@@ -10,20 +10,20 @@ links:
   name="command-demo"
   align="start"
   className="[&_.preview>div]:max-w-[450px]"
-  description="A command menu"
+  description="一个命令菜单"
 />
 
-## About
+## 关于
 
-The `<Command />` component uses the [`cmdk`](https://cmdk.paco.me) component by [pacocoursey](https://twitter.com/pacocoursey).
+`<Command />` 组件使用了 [pacocoursey](https://twitter.com/pacocoursey) 的 [`cmdk`](https://cmdk.paco.me) 组件。
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -37,17 +37,17 @@ npx shadcn@latest add command
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install cmdk
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="command" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -55,7 +55,7 @@ npm install cmdk
 
 </CodeTabs>
 
-## Usage
+## 使用
 
 ```tsx
 import {
@@ -73,34 +73,34 @@ import {
 
 ```tsx
 <Command>
-  <CommandInput placeholder="Type a command or search..." />
+  <CommandInput placeholder="输入命令或搜索..." />
   <CommandList>
-    <CommandEmpty>No results found.</CommandEmpty>
-    <CommandGroup heading="Suggestions">
-      <CommandItem>Calendar</CommandItem>
-      <CommandItem>Search Emoji</CommandItem>
-      <CommandItem>Calculator</CommandItem>
+    <CommandEmpty>未找到结果。</CommandEmpty>
+    <CommandGroup heading="建议">
+      <CommandItem>日历</CommandItem>
+      <CommandItem>搜索表情符号</CommandItem>
+      <CommandItem>计算器</CommandItem>
     </CommandGroup>
     <CommandSeparator />
-    <CommandGroup heading="Settings">
-      <CommandItem>Profile</CommandItem>
-      <CommandItem>Billing</CommandItem>
-      <CommandItem>Settings</CommandItem>
+    <CommandGroup heading="设置">
+      <CommandItem>个人资料</CommandItem>
+      <CommandItem>账单</CommandItem>
+      <CommandItem>设置</CommandItem>
     </CommandGroup>
   </CommandList>
 </Command>
 ```
 
-## Examples
+## 示例
 
-### Dialog
+### 对话框
 
 <ComponentPreview
   name="command-dialog"
-  description="A command menu in a dialog"
+  description="对话框中的命令菜单"
 />
 
-To show the command menu in a dialog, use the `<CommandDialog />` component.
+要在对话框中显示命令菜单，请使用 `<CommandDialog />` 组件。
 
 ```tsx
 export function CommandMenu() {
@@ -119,13 +119,13 @@ export function CommandMenu() {
 
   return (
     <CommandDialog open={open} onOpenChange={setOpen}>
-      <CommandInput placeholder="Type a command or search..." />
+      <CommandInput placeholder="输入命令或搜索..." />
       <CommandList>
-        <CommandEmpty>No results found.</CommandEmpty>
-        <CommandGroup heading="Suggestions">
-          <CommandItem>Calendar</CommandItem>
-          <CommandItem>Search Emoji</CommandItem>
-          <CommandItem>Calculator</CommandItem>
+        <CommandEmpty>未找到结果。</CommandEmpty>
+        <CommandGroup heading="建议">
+          <CommandItem>日历</CommandItem>
+          <CommandItem>搜索表情符号</CommandItem>
+          <CommandItem>计算器</CommandItem>
         </CommandGroup>
       </CommandList>
     </CommandDialog>
@@ -133,17 +133,17 @@ export function CommandMenu() {
 }
 ```
 
-### Combobox
+### 组合框
 
-You can use the `<Command />` component as a combobox. See the [Combobox](/docs/components/combobox) page for more information.
+您可以将 `<Command />` 组件用作组合框。有关更多信息，请参见 [组合框](/docs/components/combobox) 页面。
 
-## Changelog
+## 更新日志
 
-### 2024-10-25 Classes for icons
+### 2024-10-25 图标类
 
-Added `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` to the `<CommandItem />` to automatically style icon inside.
+为 `<CommandItem />` 添加 `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` 以自动样式化内部图标。
 
-Add the following classes to the `cva` call in your `command.tsx` file.
+在您的 `command.tsx` 文件中的 `cva` 调用中添加以下类。
 
 ```tsx showLineNumbers title="command.tsx"
 const CommandItem = React.forwardRef<
