--- a/apps/www/content/docs/components/context-menu.mdx
+++ b/apps/www/content/docs/components/context-menu.mdx
@@ -1,6 +1,6 @@
 ---
-title: Context Menu
-description: Displays a menu to the user — such as a set of actions or functions — triggered by a button.
+title: 上下文菜单
+description: 显示一个菜单给用户 — 例如一组动作或功能 — 通过一个按钮触发。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/context-menu
@@ -9,16 +9,16 @@ links:
 
 <ComponentPreview
   name="context-menu-demo"
-  description="A context menu with sub menu items."
+  description="带有子菜单项的上下文菜单."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -32,17 +32,17 @@ npx shadcn@latest add context-menu
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖:</Step>
 
 ```bash
 npm install @radix-ui/react-context-menu
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="context-menu" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以符合您的项目设置。</Step>
 
 </Steps>
 
@@ -50,7 +50,7 @@ npm install @radix-ui/react-context-menu
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -63,12 +63,12 @@ import {
 
 ```tsx
 <ContextMenu>
-  <ContextMenuTrigger>Right click</ContextMenuTrigger>
+  <ContextMenuTrigger>右键点击</ContextMenuTrigger>
   <ContextMenuContent>
-    <ContextMenuItem>Profile</ContextMenuItem>
-    <ContextMenuItem>Billing</ContextMenuItem>
-    <ContextMenuItem>Team</ContextMenuItem>
-    <ContextMenuItem>Subscription</ContextMenuItem>
+    <ContextMenuItem>个人资料</ContextMenuItem>
+    <ContextMenuItem>账单</ContextMenuItem>
+    <ContextMenuItem>团队</ContextMenuItem>
+    <ContextMenuItem>订阅</ContextMenuItem>
   </ContextMenuContent>
 </ContextMenu>
 ```
