--- a/apps/www/content/docs/components/dropdown-menu.mdx
+++ b/apps/www/content/docs/components/dropdown-menu.mdx
@@ -1,6 +1,6 @@
 ---
-title: Dropdown Menu
-description: Displays a menu to the user — such as a set of actions or functions — triggered by a button.
+title: 下拉菜单
+description: 向用户显示一个菜单——例如一组操作或功能——由一个按钮触发。
 featured: true
 component: true
 links:
@@ -10,16 +10,16 @@ links:
 
 <ComponentPreview
   name="dropdown-menu-demo"
-  description="A dropdown menu with icons, shortcuts and sub menu items."
+  description="一个带有图标、快捷方式和子菜单项的下拉菜单."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -33,17 +33,17 @@ npx shadcn@latest add dropdown-menu
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖:</Step>
 
 ```bash
 npm install @radix-ui/react-dropdown-menu
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="dropdown-menu" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配你的项目设置。</Step>
 
 </Steps>
 
@@ -51,7 +51,7 @@ npm install @radix-ui/react-dropdown-menu
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -66,41 +66,41 @@ import {
 
 ```tsx
 <DropdownMenu>
-  <DropdownMenuTrigger>Open</DropdownMenuTrigger>
+  <DropdownMenuTrigger>打开</DropdownMenuTrigger>
   <DropdownMenuContent>
-    <DropdownMenuLabel>My Account</DropdownMenuLabel>
+    <DropdownMenuLabel>我的账户</DropdownMenuLabel>
     <DropdownMenuSeparator />
-    <DropdownMenuItem>Profile</DropdownMenuItem>
-    <DropdownMenuItem>Billing</DropdownMenuItem>
-    <DropdownMenuItem>Team</DropdownMenuItem>
-    <DropdownMenuItem>Subscription</DropdownMenuItem>
+    <DropdownMenuItem>个人资料</DropdownMenuItem>
+    <DropdownMenuItem>账单</DropdownMenuItem>
+    <DropdownMenuItem>团队</DropdownMenuItem>
+    <DropdownMenuItem>订阅</DropdownMenuItem>
   </DropdownMenuContent>
 </DropdownMenu>
 ```
 
-## Examples
+## 示例
 
-### Checkboxes
+### 复选框
 
 <ComponentPreview
   name="dropdown-menu-checkboxes"
-  description="A dropdown menu with checkboxes."
+  description="一个带有复选框的下拉菜单."
 />
 
-### Radio Group
+### 单选组
 
 <ComponentPreview
   name="dropdown-menu-radio-group"
-  description="A dropdown menu with radio items."
+  description="一个带有单选项的下拉菜单."
 />
 
-## Changelog
+## 更新日志
 
-### 2024-10-16 Classes for icons
+### 2024-10-16 图标的类
 
-Added `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` to the `DropdownMenuItem` to automatically style icon inside the dropdown menu item.
+将 `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` 添加到 `DropdownMenuItem` 中，以自动样式化下拉菜单项内的图标。
 
-Add the following classes to the `DropdownMenuItem` in your `dropdown-menu.tsx` file.
+在你的 `dropdown-menu.tsx` 文件中，将以下类添加到 `DropdownMenuItem`。
 
 ```diff showLineNumbers title="dropdown-menu.tsx"
 const DropdownMenuItem = React.forwardRef<
@@ -121,11 +121,11 @@ const DropdownMenuItem = React.forwardRef<
 ))
 ```
 
-### 2024-10-25 Classes for `<DropdownMenuSubTrigger />`
+### 2024-10-25 `<DropdownMenuSubTrigger />` 的类
 
-Added `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` to the `<DropdownMenuSubTrigger />` to automatically style icon inside.
+将 `gap-2 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0` 添加到 `<DropdownMenuSubTrigger />` 中，以自动样式化内的图标。
 
-Add the following classes to the `cva` call in your `dropdown-menu.tsx` file.
+在你的 `dropdown-menu.tsx` 文件中，将以下类添加到 `cva` 调用中。
 
 ```tsx title="dropdown-menu.tsx"
 <DropdownMenuPrimitive.SubTrigger
