--- a/apps/www/content/docs/components/hover-card.mdx
+++ b/apps/www/content/docs/components/hover-card.mdx
@@ -1,21 +1,21 @@
 ---
-title: Hover Card
-description: For sighted users to preview content available behind a link.
+title: 悬停卡片
+description: 供视觉用户预览链接后可用的内容。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/hover-card
   api: https://www.radix-ui.com/docs/primitives/components/hover-card#api-reference
 ---
 
-<ComponentPreview name="hover-card-demo" description="A hover card component" />
+<ComponentPreview name="hover-card-demo" description="一个悬停卡片组件" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -27,7 +27,7 @@ npx shadcn@latest add hover-card
 
 <TabsContent value="manual">
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-hover-card
@@ -35,11 +35,11 @@ npm install @radix-ui/react-hover-card
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="hover-card" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -47,7 +47,7 @@ npm install @radix-ui/react-hover-card
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -59,9 +59,9 @@ import {
 
 ```tsx
 <HoverCard>
-  <HoverCardTrigger>Hover</HoverCardTrigger>
+  <HoverCardTrigger>悬停</HoverCardTrigger>
   <HoverCardContent>
-    The React Framework – created and maintained by @vercel.
+    React 框架 – 由 @vercel 创建和维护。
   </HoverCardContent>
 </HoverCard>
 ```
