--- a/apps/www/content/docs/components/pagination.mdx
+++ b/apps/www/content/docs/components/pagination.mdx
@@ -1,21 +1,21 @@
 ---
-title: Pagination
-description: Pagination with page navigation, next and previous links.
+title: 分页
+description: 带有页码导航、下一页和上一页链接的分页。
 component: true
 ---
 
 <ComponentPreview
   name="pagination-demo"
-  description="A pagination with previous and next links."
+  description="一个具有上一页和下一页链接的分页组件。"
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -29,11 +29,11 @@ npx shadcn@latest add pagination
 
 <Steps>
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="pagination" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -41,7 +41,7 @@ npx shadcn@latest add pagination
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -76,9 +76,9 @@ import {
 
 ### Next.js
 
-By default the `<PaginationLink />` component will render an `<a />` tag.
+默认情况下，`<PaginationLink />` 组件将渲染一个 `<a />` 标签。
 
-To use the Next.js `<Link />` component, make the following updates to `pagination.tsx`.
+要使用 Next.js 的 `<Link />` 组件，请对 `pagination.tsx` 做如下更新。
 
 ```diff showLineNumbers /typeof Link/ {1}
 + import Link from "next/link"
@@ -100,6 +100,6 @@ const PaginationLink = ({...props }: ) => (
 
 <Callout className="mt-6">
 
-**Note:** We are making updates to the cli to automatically do this for you.
+**注意：** 我们正在对命令行进行更新，以便自动为您处理此事。
 
 </Callout>
