--- a/apps/www/content/docs/components/resizable.mdx
+++ b/apps/www/content/docs/components/resizable.mdx
@@ -1,6 +1,6 @@
 ---
-title: Resizable
-description: Accessible resizable panel groups and layouts with keyboard support.
+title: 可调整大小
+description: 带有键盘支持的可访问可调整大小面板组和布局。
 component: true
 links:
   doc: https://github.com/bvaughn/react-resizable-panels
@@ -9,20 +9,20 @@ links:
 
 <ComponentPreview
   name="resizable-demo"
-  description="A group of resizable horizontal and vertical panels."
+  description="一组可调整大小的水平和垂直面板。"
 />
 
-## About
+## 关于
 
-The `Resizable` component is built on top of [react-resizable-panels](https://github.com/bvaughn/react-resizable-panels) by [bvaughn](https://github.com/bvaughn).
+`Resizable` 组件建立在 [react-resizable-panels](https://github.com/bvaughn/react-resizable-panels) 之上，由 [bvaughn](https://github.com/bvaughn) 开发。
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -36,17 +36,17 @@ npx shadcn@latest add resizable
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install react-resizable-panels
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="resizable" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -54,7 +54,7 @@ npm install react-resizable-panels
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import {
@@ -66,21 +66,21 @@ import {
 
 ```tsx
 <ResizablePanelGroup direction="horizontal">
-  <ResizablePanel>One</ResizablePanel>
+  <ResizablePanel>一</ResizablePanel>
   <ResizableHandle />
-  <ResizablePanel>Two</ResizablePanel>
+  <ResizablePanel>二</ResizablePanel>
 </ResizablePanelGroup>
 ```
 
-## Examples
+## 示例
 
-### Vertical
+### 垂直
 
-Use the `direction` prop to set the direction of the resizable panels.
+使用 `direction` 属性来设置可调整大小面板的方向。
 
 <ComponentPreview
   name="resizable-vertical"
-  description="A group of resizable vertical panels."
+  description="一组可调整大小的垂直面板。"
 />
 
 ```tsx showLineNumbers {9}
@@ -93,21 +93,21 @@ import {
 export default function Example() {
   return (
     <ResizablePanelGroup direction="vertical">
-      <ResizablePanel>One</ResizablePanel>
+      <ResizablePanel>一</ResizablePanel>
       <ResizableHandle />
-      <ResizablePanel>Two</ResizablePanel>
+      <ResizablePanel>二</ResizablePanel>
     </ResizablePanelGroup>
   )
 }
 ```
 
-### Handle
+### 手柄
 
-You can set or hide the handle by using the `withHandle` prop on the `ResizableHandle` component.
+您可以通过在 `ResizableHandle` 组件上使用 `withHandle` 属性来设置或隐藏手柄。
 
 <ComponentPreview
   name="resizable-handle"
-  description="A group of resizable panels with a handle."
+  description="一组带有手柄的可调整大小面板。"
 />
 
 ```tsx showLineNumbers {11}
@@ -120,9 +120,9 @@ import {
 export default function Example() {
   return (
     <ResizablePanelGroup direction="horizontal">
-      <ResizablePanel>One</ResizablePanel>
+      <ResizablePanel>一</ResizablePanel>
       <ResizableHandle withHandle />
-      <ResizablePanel>Two</ResizablePanel>
+      <ResizablePanel>二</ResizablePanel>
     </ResizablePanelGroup>
   )
 }
