--- a/apps/www/content/docs/components/sonner.mdx
+++ b/apps/www/content/docs/components/sonner.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sonner
-description: An opinionated toast component for React.
+description: 一个有观点的 React 吐司组件。
 component: true
 links:
   doc: https://sonner.emilkowal.ski
@@ -8,29 +8,29 @@ links:
 
 <ComponentPreview name="sonner-demo" />
 
-## About
+## 关于
 
-Sonner is built and maintained by [emilkowalski\_](https://twitter.com/emilkowalski_).
+Sonner 是由 [emilkowalski\_](https://twitter.com/emilkowalski_) 构建和维护的。
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
 <Steps>
 
-<Step>Run the following command:</Step>
+<Step>运行以下命令：</Step>
 
 ```bash
 npx shadcn@latest add sonner
 ```
 
-<Step>Add the Toaster component</Step>
+<Step>添加 Toaster 组件</Step>
 
 ```tsx title="app/layout.tsx" {1,9}
 import { Toaster } from "@/components/ui/sonner"
@@ -56,17 +56,17 @@ export default function RootLayout({ children }) {
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install sonner next-themes
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="sonner" />
 
-<Step>Add the Toaster component</Step>
+<Step>添加 Toaster 组件</Step>
 
 ```tsx title="app/layout.tsx" {1,9}
 import { Toaster } from "@/components/ui/sonner"
@@ -90,12 +90,12 @@ export default function RootLayout({ children }) {
 
 </CodeTabs>
 
-## Usage
+## 用法
 
 ```tsx
 import { toast } from "sonner"
 ```
 
 ```tsx
-toast("Event has been created.")
+toast("事件已创建。")
 ```
