--- a/apps/www/content/docs/components/switch.mdx
+++ b/apps/www/content/docs/components/switch.mdx
@@ -1,21 +1,21 @@
 ---
-title: Switch
-description: A control that allows the user to toggle between checked and not checked.
+title: 开关
+description: 允许用户在选中和未选之间切换的控件。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/switch
   api: https://www.radix-ui.com/docs/primitives/components/switch#api-reference
 ---
 
-<ComponentPreview name="switch-demo" description="A switch component." />
+<ComponentPreview name="switch-demo" description="一个开关组件。" />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
-  <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">命令行</TabsTrigger>
+  <TabsTrigger value="manual">手动安装</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -29,17 +29,17 @@ npx shadcn@latest add switch
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖：</Step>
 
 ```bash
 npm install @radix-ui/react-switch
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到你的项目中。</Step>
 
 <ComponentSource name="switch" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配你的项目设置。</Step>
 
 </Steps>
 
@@ -47,7 +47,7 @@ npm install @radix-ui/react-switch
 
 </CodeTabs>
 
-## Usage
+## 使用方法
 
 ```tsx
 import { Switch } from "@/components/ui/switch"
@@ -57,8 +57,8 @@ import { Switch } from "@/components/ui/switch"
 <Switch />
 ```
 
-## Examples
+## 示例
 
-### Form
+### 表单
 
 <ComponentPreview name="switch-form" />
