--- a/apps/www/content/docs/components/toggle-group.mdx
+++ b/apps/www/content/docs/components/toggle-group.mdx
@@ -1,6 +1,6 @@
 ---
-title: Toggle Group
-description: A set of two-state buttons that can be toggled on or off.
+title: 切换组
+description: 一组可以切换开关的二状态按钮。
 component: true
 links:
   doc: https://www.radix-ui.com/docs/primitives/components/toggle-group
@@ -9,16 +9,16 @@ links:
 
 <ComponentPreview
   name="toggle-group-demo"
-  description="A toggle group with three items."
+  description="一个包含三个项目的切换组."
 />
 
-## Installation
+## 安装
 
 <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="cli">CLI</TabsTrigger>
-  <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="manual">手动</TabsTrigger>
 </TabsList>
 <TabsContent value="cli">
 
@@ -32,17 +32,17 @@ npx shadcn@latest add toggle-group
 
 <Steps>
 
-<Step>Install the following dependencies:</Step>
+<Step>安装以下依赖:</Step>
 
 ```bash
 npm install @radix-ui/react-toggle-group
 ```
 
-<Step>Copy and paste the following code into your project.</Step>
+<Step>将以下代码复制并粘贴到您的项目中。</Step>
 
 <ComponentSource name="toggle-group" />
 
-<Step>Update the import paths to match your project setup.</Step>
+<Step>更新导入路径以匹配您的项目设置。</Step>
 
 </Steps>
 
@@ -50,7 +50,7 @@ npm install @radix-ui/react-toggle-group
 
 </CodeTabs>
 
-## Usage
+## 使用
 
 ```tsx
 import { ToggleGroup, ToggleGroupItem } from "@/components/ui/toggle-group"
@@ -64,46 +64,46 @@ import { ToggleGroup, ToggleGroupItem } from "@/components/ui/toggle-group"
 </ToggleGroup>
 ```
 
-## Examples
+## 示例
 
-### Default
+### 默认
 
 <ComponentPreview
   name="toggle-group-demo"
-  description="A toggle group with three items."
+  description="一个包含三个项目的切换组."
 />
 
-### Outline
+### 轮廓
 
 <ComponentPreview
   name="toggle-group-outline"
-  description="A toggle group using the outline variant."
+  description="使用轮廓变体的切换组."
 />
 
-### Single
+### 单一
 
 <ComponentPreview
   name="toggle-group-single"
-  description="A toggle group with single selection."
+  description="一个单一选择的切换组."
 />
 
-### Small
+### 小型
 
 <ComponentPreview
   name="toggle-group-sm"
-  description="A toggle group using the small size."
+  description="使用小型的切换组."
 />
 
-### Large
+### 大型
 
 <ComponentPreview
   name="toggle-group-lg"
-  description="A toggle group using the large size."
+  description="使用大型的切换组."
 />
 
-### Disabled
+### 禁用
 
 <ComponentPreview
   name="toggle-group-disabled"
-  description="A disabled toggle group."
+  description="一个禁用的切换组."
 />
