--- a/apps/www/content/docs/installation/gatsby.mdx
+++ b/apps/www/content/docs/installation/gatsby.mdx
@@ -1,47 +1,45 @@
 ---
 title: Gatsby
-description: Install and configure Gatsby.
+description: 安装和配置 Gatsby。
 ---
 
 <Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Update:** We have added full support for React 19 and Tailwind v4 in the
-  `canary` release. See the docs for [Tailwind v4](/docs/tailwind-v4) for more
-  information.
+  **更新：** 我们在 `canary` 版本中已完全支持 React 19 和 Tailwind v4。有关更多信息，请查看 [Tailwind v4](/docs/tailwind-v4) 的文档。
 </Callout>
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Start by creating a new Gatsby project using `create-gatsby`:
+首先使用 `create-gatsby` 创建一个新的 Gatsby 项目：
 
 ```bash
 npm init gatsby
 ```
 
-### Configure your Gatsby project to use TypeScript and Tailwind CSS
+### 配置你的 Gatsby 项目以使用 TypeScript 和 Tailwind CSS
 
-You will be asked a few questions to configure your project:
+系统会询问您一些问题以配置您的项目：
 
 ```txt showLineNumbers
-✔ What would you like to call your site?
+✔ 您想给您的网站取什么名字？
 · your-app-name
-✔ What would you like to name the folder where your site will be created?
+✔ 您想给您的网站创建的文件夹命名为？
 · your-app-name
-✔ Will you be using JavaScript or TypeScript?
+✔ 您将使用 JavaScript 还是 TypeScript？
 · TypeScript
-✔ Will you be using a CMS?
-· Choose whatever you want
-✔ Would you like to install a styling system?
+✔ 您会使用 CMS 吗？
+· 选择您想要的
+✔ 您想安装一个样式系统吗？
 · Tailwind CSS
-✔ Would you like to install additional features with other plugins?
-· Choose whatever you want
-✔ Shall we do this? (Y/n) · Yes
+✔ 您想通过其他插件安装额外功能吗？
+· 选择您想要的
+✔ 我们可以这样做吗？ (Y/n) · 是
 ```
 
-### Edit tsconfig.json file
+### 编辑 tsconfig.json 文件
 
-Add the following code to the `tsconfig.json` file to resolve paths:
+在 `tsconfig.json` 文件中添加以下代码以解析路径：
 
 ```ts {4-9} showLineNumbers
 {
@@ -58,9 +56,9 @@ Add the following code to the `tsconfig.json` file to resolve paths:
 }
 ```
 
-### Create gatsby-node.ts file
+### 创建 gatsby-node.ts 文件
 
-Create a `gatsby-node.ts` file at the root of your project if it doesn’t already exist, and add the code below to the `gatsby-node` file so your app can resolve paths:
+如果项目根目录下不存在 `gatsby-node.ts` 文件，请创建一个，并在该文件中添加以下代码，以便您的应用可以解析路径：
 
 ```ts
 import * as path from "path"
@@ -77,39 +75,39 @@ export const onCreateWebpackConfig = ({ actions }) => {
 }
 ```
 
-### Run the CLI
+### 运行 CLI
 
-Run the `shadcn-ui` init command to setup your project:
+运行 `shadcn-ui` 初始化命令来设置您的项目：
 
 ```bash
 npx shadcn@latest init
 ```
 
-### Configure components.json
+### 配置 components.json
 
-You will be asked a few questions to configure `components.json`:
+系统会询问您一些问题以配置 `components.json`：
 
 ```txt showLineNumbers
-Would you like to use TypeScript (recommended)? no / yes
-Which style would you like to use? › Default
-Which color would you like to use as base color? › Slate
-Where is your global CSS file? › › ./src/styles/globals.css
-Do you want to use CSS variables for colors? › no / yes
-Where is your tailwind.config.js located? › tailwind.config.js
-Configure the import alias for components: › @/components
-Configure the import alias for utils: › @/lib/utils
-Are you using React Server Components? › no
+您想使用 TypeScript（推荐）吗？ no / yes
+您想使用哪种样式？ › 默认
+您想使用哪种颜色作为基础颜色？ › Slate
+您的全球 CSS 文件在哪里？ › › ./src/styles/globals.css
+您想为颜色使用 CSS 变量吗？ › no / yes
+您的 tailwind.config.js 位于哪里？ › tailwind.config.js
+配置组件的导入别名： › @/components
+配置工具的导入别名： › @/lib/utils
+您正在使用 React Server 组件吗？ › no
 ```
 
-### That's it
+### 就这样
 
-You can now start adding components to your project.
+您现在可以开始向项目中添加组件。
 
 ```bash
 npx shadcn@latest add button
 ```
 
-The command above will add the `Button` component to your project. You can then import it like this:
+上述命令将 `Button` 组件添加到您的项目中。您可以像这样导入它：
 
 ```tsx {1,6} showLineNumbers
 import { Button } from "@/components/ui/button"
@@ -117,7 +115,7 @@ import { Button } from "@/components/ui/button"
 export default function Home() {
   return (
     <div>
-      <Button>Click me</Button>
+      <Button>点击我</Button>
     </div>
   )
 }
