--- a/apps/www/content/docs/installation/laravel.mdx
+++ b/apps/www/content/docs/installation/laravel.mdx
@@ -1,32 +1,31 @@
 ---
 title: Laravel
-description: Install and configure shadcn/ui for Laravel
+description: 安装和配置 shadcn/ui 以用于 Laravel
 ---
 
 <Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
+  **注意：** 以下指南适用于 Tailwind v4。如果您使用的是 Tailwind v3，请使用 `shadcn@2.3.0`。
 </Callout>
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Start by creating a new Laravel project with Inertia and React using the laravel installer `laravel new my-app`:
+首先使用 Laravel 安装程序创建一个新的 Laravel 项目，包含 Inertia 和 React，命令为 `laravel new my-app`：
 
 ```bash
 laravel new my-app --react
 ```
 
-### Add Components
+### 添加组件
 
-You can now start adding components to your project.
+现在您可以开始向项目中添加组件。
 
 ```bash
 npx shadcn@latest add switch
 ```
 
-The command above will add the `Switch` component to `resources/js/components/ui/switch.tsx`. You can then import it like this:
+上面的命令将会把 `Switch` 组件添加到 `resources/js/components/ui/switch.tsx`。然后您可以这样导入它：
 
 ```tsx {1,6} showLineNumbers
 import { Switch } from "@/components/ui/switch"
