--- a/apps/www/content/docs/installation/next.mdx
+++ b/apps/www/content/docs/installation/next.mdx
@@ -1,34 +1,33 @@
 ---
 title: Next.js
-description: Install and configure shadcn/ui for Next.js.
+description: 安装和配置 shadcn/ui 以支持 Next.js。
 ---
 
 <Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
+  **注意：** 以下指南适用于 Tailwind v4。如果您使用的是 Tailwind v3，请使用 `shadcn@2.3.0`。
 </Callout>
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Run the `init` command to create a new Next.js project or to setup an existing one:
+运行 `init` 命令以创建一个新的 Next.js 项目或设置一个现有项目：
 
 ```bash
 npx shadcn@latest init
 ```
 
-Choose between a Next.js project or a Monorepo.
+选择 Next.js 项目或 Monorepo。
 
-### Add Components
+### 添加组件
 
-You can now start adding components to your project.
+现在您可以开始向项目中添加组件。
 
 ```bash
 npx shadcn@latest add button
 ```
 
-The command above will add the `Button` component to your project. You can then import it like this:
+上面的命令将把 `Button` 组件添加到您的项目中。然后您可以像这样导入它：
 
 ```tsx {1,6} showLineNumbers
 import { Button } from "@/components/ui/button"
@@ -36,7 +35,7 @@ import { Button } from "@/components/ui/button"
 export default function Home() {
   return (
     <div>
-      <Button>Click me</Button>
+      <Button>点击我</Button>
     </div>
   )
 }
