--- a/apps/www/content/docs/installation/remix.mdx
+++ b/apps/www/content/docs/installation/remix.mdx
@@ -1,67 +1,67 @@
 ---
 title: Remix
-description: Install and configure shadcn/ui for Remix.
+description: 安装和配置 shadcn/ui 在 Remix 中
 ---
 
 <Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
+  **注意：** 以下指南适用于 Tailwind v4。如果您使用的是 Tailwind
+  v3，请使用 `shadcn@2.3.0`。
 </Callout>
 
 <Callout>
 
-**Note:** This guide is for Remix. For React Router, see the [React Router](/docs/installation/react-router) guide.
+**注意：** 本指南适用于 Remix。如需 React Router，请参阅 [React Router](/docs/installation/react-router) 指南。
 
 </Callout>
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Start by creating a new Remix project using `create-remix`:
+首先使用 `create-remix` 创建一个新的 Remix 项目：
 
 ```bash
 npx create-remix@latest my-app
 ```
 
-### Run the CLI
+### 运行 CLI
 
-Run the `shadcn-ui` init command to setup your project:
+运行 `shadcn-ui` 初始化命令以设置您的项目：
 
 ```bash
 npx shadcn@latest init
 ```
 
-### Configure components.json
+### 配置 components.json
 
-You will be asked a few questions to configure `components.json`:
+您将被询问几个问题以配置 `components.json`：
 
 ```txt showLineNumbers
-Which style would you like to use? › New York
-Which color would you like to use as base color? › Zinc
-Do you want to use CSS variables for colors? › no / yes
+您想使用哪种样式？ › New York
+您想使用什么颜色作为基础颜色？ › Zinc
+您想使用 CSS 变量来定义颜色吗？ › no / yes
 ```
 
-### App structure
+### 应用结构
 
 <Callout>
 
-**Note**: This app structure is only a suggestion. You can place the files wherever you want.
+**注意**：此应用结构仅为建议。您可以根据需要放置文件。
 
 </Callout>
 
-- Place the UI components in the `app/components/ui` folder.
-- Your own components can be placed in the `app/components` folder.
-- The `app/lib` folder contains all the utility functions. We have a `utils.ts` where we define the `cn` helper.
-- The `app/tailwind.css` file contains the global CSS.
+- 将 UI 组件放在 `app/components/ui` 文件夹中。
+- 您自己的组件可以放在 `app/components` 文件夹中。
+- `app/lib` 文件夹包含所有实用函数。我们有一个 `utils.ts` 文件，在其中定义 `cn` 助手函数。
+- `app/tailwind.css` 文件包含全局 CSS。
 
-### Install Tailwind CSS
+### 安装 Tailwind CSS
 
 ```bash
 npm install -D tailwindcss@latest autoprefixer@latest
 ```
 
-Then we create a `postcss.config.js` file:
+然后我们创建一个 `postcss.config.js` 文件：
 
 ```js
 export default {
@@ -72,7 +72,7 @@ export default {
 }
 ```
 
-And finally we add the following to our `remix.config.js` file:
+最后，我们将以下内容添加到 `remix.config.js` 文件中：
 
 ```js {4-5}
 /** @type {import('@remix-run/dev').AppConfig} */
@@ -84,9 +84,9 @@ export default {
 };
 ```
 
-### Add `tailwind.css` to your app
+### 将 `tailwind.css` 添加到您的应用中
 
-In your `app/root.tsx` file, import the `tailwind.css` file:
+在您的 `app/root.tsx` 文件中，导入 `tailwind.css` 文件：
 
 ```js {1, 4}
 import styles from "./tailwind.css?url"
@@ -97,15 +97,15 @@ export const links: LinksFunction = () => [
 ]
 ```
 
-### That's it
+### 就这些
 
-You can now start adding components to your project.
+您现在可以开始向您的项目添加组件。
 
 ```bash
 npx shadcn@latest add button
 ```
 
-The command above will add the `Button` component to your project. You can then import it like this:
+上述命令将把 `Button` 组件添加到您的项目中。您可以像这样导入它：
 
 ```tsx {1,6} showLineNumbers
 import { Button } from "~/components/ui/button"
@@ -113,7 +113,7 @@ import { Button } from "~/components/ui/button"
 export default function Home() {
   return (
     <div>
-      <Button>Click me</Button>
+      <Button>点击我</Button>
     </div>
   )
 }
