--- a/apps/www/content/docs/installation/tanstack.mdx
+++ b/apps/www/content/docs/installation/tanstack.mdx
@@ -1,27 +1,27 @@
 ---
-title: TanStack Start
-description: Install and configure shadcn/ui for TanStack Start.
+title: TanStack 开始
+description: 安装和配置 shadcn/ui 以便于 TanStack 开始使用。
 ---
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Start by creating a new TanStack Start project:
+首先创建一个新的 TanStack 开始项目：
 
 ```bash
 npx create-tsrouter-app@latest my-app --template file-router --tailwind --add-ons shadcn
 ```
 
-### Add Components
+### 添加组件
 
-You can now start adding components to your project.
+您现在可以开始向项目中添加组件。
 
 ```bash
 npx shadcn@canary add button
 ```
 
-The command above will add the `Button` component to your project. You can then import it like this:
+上面的命令将会把 `Button` 组件添加到您的项目中。您可以像这样导入它：
 
 ```tsx title="src/routes/index.tsx" showLineNumbers {3,12}
 import { createFileRoute } from "@tanstack/react-router"
@@ -35,7 +35,7 @@ export const Route = createFileRoute("/")({
 function App() {
   return (
     <div>
-      <Button>Click me</Button>
+      <Button>点击我</Button>
     </div>
   )
 }
