--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -1,40 +1,38 @@
 ---
 title: Vite
-description: Install and configure shadcn/ui for Vite.
+description: 安装和配置 shadcn/ui 以供 Vite 使用。
 ---
 
 <Callout className="bg-blue-50 border-blue-600 dark:border-blue-900 dark:bg-blue-950 mb-6 [&_code]:bg-blue-100 dark:[&_code]:bg-blue-900">
-  **Note:** The following guide is for Tailwind v4. If you are using Tailwind
-  v3, use `shadcn@2.3.0`.
+  **注意：** 以下指南适用于 Tailwind v4。如果您使用的是 Tailwind v3，请使用 `shadcn@2.3.0`。
 </Callout>
 
 <Steps>
 
-### Create project
+### 创建项目
 
-Start by creating a new React project using `vite`. Select the **React + TypeScript** template:
+首先使用 `vite` 创建一个新的 React 项目。选择 **React + TypeScript** 模板：
 
 ```bash
 npm create vite@latest
 ```
 
-### Add Tailwind CSS
+### 添加 Tailwind CSS
 
 ```bash
 npm install tailwindcss @tailwindcss/vite
 ```
 
-Replace everything in `src/index.css` with the following:
+将 `src/index.css` 中的所有内容替换为以下内容：
 
 ```css title="src/index.css"
 @import "tailwindcss";
 ```
 
-### Edit tsconfig.json file
+### 编辑 tsconfig.json 文件
 
-The current version of Vite splits TypeScript configuration into three files, two of which need to be edited.
-Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the `tsconfig.json` and
-`tsconfig.app.json` files:
+当前版本的 Vite 将 TypeScript 配置拆分成三个文件，其中两个需要进行编辑。
+在 `tsconfig.json` 和 `tsconfig.app.json` 文件的 `compilerOptions` 部分添加 `baseUrl` 和 `paths` 属性：
 
 ```ts {11-16} showLineNumbers
 {
@@ -56,9 +54,9 @@ Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the
 }
 ```
 
-### Edit tsconfig.app.json file
+### 编辑 tsconfig.app.json 文件
 
-Add the following code to the `tsconfig.app.json` file to resolve paths, for your IDE:
+在 `tsconfig.app.json` 文件中添加以下代码以便为您的 IDE 解析路径：
 
 ```ts {4-9} showLineNumbers
 {
@@ -75,9 +73,9 @@ Add the following code to the `tsconfig.app.json` file to resolve paths, for you
 }
 ```
 
-### Update vite.config.ts
+### 更新 vite.config.ts
 
-Add the following code to the vite.config.ts so your app can resolve paths without error:
+在 vite.config.ts 中添加以下代码，以便您的应用能够正确解析路径：
 
 ```bash
 npm install -D @types/node
@@ -100,29 +98,29 @@ export default defineConfig({
 })
 ```
 
-### Run the CLI
+### 运行 CLI
 
-Run the `shadcn` init command to setup your project:
+运行 `shadcn` 初始化命令以设置您的项目：
 
 ```bash
 npx shadcn@latest init
 ```
 
-You will be asked a few questions to configure `components.json`.
+系统会询问您一些问题以配置 `components.json`。
 
 ```txt
-Which color would you like to use as base color? › Neutral
+您想使用哪种颜色作为基础颜色？ › 中性
 ```
 
-### Add Components
+### 添加组件
 
-You can now start adding components to your project.
+现在您可以开始向项目中添加组件。
 
 ```bash
 npx shadcn@latest add button
 ```
 
-The command above will add the `Button` component to your project. You can then import it like this:
+上述命令将向您的项目添加 `Button` 组件。您可以像这样导入它：
 
 ```tsx showLineNumbers title="src/App.tsx"
 import { Button } from "@/components/ui/button"
@@ -130,7 +128,7 @@ import { Button } from "@/components/ui/button"
 function App() {
   return (
     <div className="flex flex-col items-center justify-center min-h-svh">
-      <Button>Click me</Button>
+      <Button>点击我</Button>
     </div>
   )
 }
