--- a/apps/www/content/docs/registry/index.mdx
+++ b/apps/www/content/docs/registry/index.mdx
@@ -1,40 +1,38 @@
 ---
-title: Registry
-description: Run your own component registry.
+title: 注册表
+description: 运行您自己的组件注册表。
 ---
 
 <Callout>
-  **Note:** This feature is currently experimental. Help us improve it by
-  testing it out and sending feedback. If you have any questions, please [reach
-  out to us](https://github.com/shadcn-ui/ui/discussions).
+  **注意：** 此功能目前处于实验阶段。通过测试并提供反馈来帮助我们改进。如果您有任何疑问，请[与我们联系](https://github.com/shadcn-ui/ui/discussions)。
 </Callout>
 
-You can use the `shadcn` CLI to run your own component registry. Running your own registry allows you to distribute your custom components, hooks, pages, and other files to any React project.
+您可以使用 `shadcn` CLI 来运行您自己的组件注册表。运行您自己的注册表可以让您将自定义组件、钩子、页面以及其他文件分发到任何 React 项目中。
 
 <figure className="flex flex-col gap-4">
   <Image
     src="/images/registry-light.png"
     width="1432"
     height="960"
-    alt="Registry"
+    alt="注册表"
     className="border dark:hidden shadow-sm rounded-lg overflow-hidden mt-6 w-full"
   />
   <Image
     src="/images/registry-dark.png"
     width="1432"
     height="960"
-    alt="Registry"
+    alt="注册表"
     className="border hidden dark:block shadow-sm rounded-lg overflow-hidden mt-6 w-full"
   />
   <figcaption className="text-center text-sm text-gray-500">
-    Distribute code to any React project.
+    将代码分发到任何 React 项目中。
   </figcaption>
 </figure>
 
-Registry items are automatically compatible with the `shadcn` CLI and `Open in v0`.
+注册表项目与 `shadcn` CLI 和 `Open in v0` 自动兼容。
 
-## Requirements
+## 要求
 
-You are free to design and host your custom registry as you see fit. The only requirement is that your registry items must be valid JSON files that conform to the [registry-item schema specification](/docs/registry/registry-item-json).
+您可以根据自己的需要自由设计和托管自定义注册表。唯一的要求是您的注册表项目必须是有效的 JSON 文件，并符合 [registry-item schema specification](/docs/registry/registry-item-json)。
 
-If you'd like to see an example of a registry, we have a [template project](https://github.com/shadcn-ui/registry-template) for you to use as a starting point.
+如果您想查看注册表的示例，我们有一个[模板项目](https://github.com/shadcn-ui/registry-template)可供您作为起点使用。
